# ScriptWriter

./: ReadMe.md  main.py  pyproject.toml
config/: settings.json
data/: style_guide.md
examples/: outline.json  scene_1.1.1.json  scene_1.1.1.md  scene_1.1.2.json  scene_1.1.2.md  themes.json
output/: imrpved.md
prompts/: main.json  main.py  outline.py  scene.py
src/: scene_generator.py  script_automator.py
src/llm/: LICENSE  LLMService.py  LLMServiceFactory.py
src/llm/provider/: BaseProvider.py  OllamaProvider.py  OpenAIProvider.py  ProviderSetup.md  ReplicateProvider.py
src/utils/: JSONValidator.py  file_handlers.py  sort_and_compare.py
